--- a/secure/Makefile
+++ b/secure/Makefile
@@ -1,12 +1,10 @@
 .include <src.opts.mk>
 
 SUBDIR= lib .WAIT \
-	libexec ${_tests} usr.bin usr.sbin
+	libexec usr.bin usr.sbin
 SUBDIR_PARALLEL=
 
-.if ${MK_TESTS} != "no"
-_tests=	tests
-.endif
+SUBDIR.${MK_TESTS}+= tests
 
 SUBDIR.${MK_CAROOT}+= caroot
 
