--- a/secure/libexec/Makefile
+++ b/secure/libexec/Makefile
@@ -1,4 +1,4 @@
-# $FreeBSD: stable/11/secure/libexec/Makefile 289393 2015-10-15 22:55:08Z bdrewery $
+# $FreeBSD$
 
 .include <src.opts.mk>
 
@@ -7,9 +7,7 @@ SUBDIR=
 SUBDIR+=sftp-server ssh-keysign ssh-pkcs11-helper
 .endif
 
-.if ${MK_TESTS} != "no"
-SUBDIR+=tests
-.endif
+SUBDIR.${MK_TESTS}+= tests
 
 SUBDIR_PARALLEL=
 
