--- a/secure/usr.sbin/Makefile
+++ b/secure/usr.sbin/Makefile
@@ -1,4 +1,4 @@
-# $FreeBSD: stable/11/secure/usr.sbin/Makefile 289393 2015-10-15 22:55:08Z bdrewery $
+# $FreeBSD$
 
 .include <src.opts.mk>
 
@@ -7,9 +7,7 @@ SUBDIR=
 SUBDIR+=sshd
 .endif
 
-.if ${MK_TESTS} != "no"
-SUBDIR+=tests
-.endif
+SUBDIR.${MK_TESTS}+= tests
 
 SUBDIR_PARALLEL=
 
