Update openssh build for 8.8p1

--- a/secure/usr.bin/ssh/Makefile
+++ b/secure/usr.bin/ssh/Makefile
@@ -1,4 +1,5 @@
 .include <src.opts.mk>
+.include "${SRCTOP}/secure/ssh.mk"
 
 PROG=	ssh
 LINKS=	${BINDIR}/ssh ${BINDIR}/slogin
@@ -12,9 +13,6 @@ SRCS=	ssh.c readconf.c clientloop.c sshtty.c \
 
 # gss-genr.c really belongs in libssh; see src/secure/lib/libssh/Makefile
 SRCS+=	gss-genr.c
-
-CFLAGS+=-I${SSHDIR} -include ssh_namespace.h
-SRCS+=	ssh_namespace.h
 
 LIBADD=	ssh
 
