WPA_DISTDIR does not need to end in a slash
Since all uses of the macro also append a slash, this leads to double
slashes.

MFC after:	3 days

(cherry picked from commit 9917049b60f7cf7345a09d2bc22d51764a477984)

--- a/usr.sbin/wpa/Makefile.inc
+++ b/usr.sbin/wpa/Makefile.inc
@@ -4,7 +4,7 @@
 
 BINDIR?=	/usr/sbin
 
-WPA_DISTDIR?= 		${SRCTOP}/contrib/wpa/
+WPA_DISTDIR?= 		${SRCTOP}/contrib/wpa
 WPA_SUPPLICANT_DISTDIR?=${WPA_DISTDIR}/wpa_supplicant
 HOSTAPD_DISTDIR?=	${WPA_DISTDIR}/hostapd
 
