--- a/share/mk/Makefile
+++ b/share/mk/Makefile
@@ -1,4 +1,3 @@
-# $FreeBSD: stable/11/share/mk/Makefile 357107 2020-01-25 05:17:44Z kevans $
 #	@(#)Makefile	8.1 (Berkeley) 6/8/93
 
 # Only parse this if executing make in this directory, not in other places
@@ -23,6 +22,7 @@ FILES=	\
 	bsd.cpu.mk \
 	bsd.crunchgen.mk \
 	bsd.dep.mk \
+	bsd.dirs.mk \
 	bsd.doc.mk \
 	bsd.dtb.mk \
 	bsd.endian.mk \
@@ -43,6 +43,7 @@ FILES=	\
 	bsd.own.mk \
 	bsd.port.mk \
 	bsd.mport.options.mk \
+	bsd.patch.mk \
 	bsd.port.post.mk \
 	bsd.port.pre.mk \
 	bsd.port.subdir.mk \
@@ -50,11 +51,14 @@ FILES=	\
 	bsd.progs.mk \
 	bsd.snmpmod.mk \
 	bsd.subdir.mk \
+	bsd.suffixes-posix.mk \
+	bsd.suffixes.mk \
 	bsd.symver.mk \
 	bsd.sys.mk \
 	bsd.sysdir.mk \
 	bsd.test.mk \
 	dirdeps.mk \
+	dirdeps-options.mk \
 	gendirdeps.mk \
 	install-new.mk \
 	meta.autodep.mk \
@@ -70,6 +74,8 @@ FILESDIR=	${BINDIR}/mk
 
 .if ${MK_TESTS} != "no"
 FILES+=	atf.test.mk
+FILES+=	googletest.test.inc.mk
+FILES+=	googletest.test.mk
 FILES+=	plain.test.mk
 FILES+=	suite.test.mk
 FILES+=	tap.test.mk
