--- a/lib/Makefile.inc
+++ b/lib/Makefile.inc
@@ -1,5 +1,4 @@
-# $MidnightBSD: src/lib/Makefile.inc,v 1.2 2008/10/02 16:47:39 laffer1 Exp $
-# $FreeBSD: src/lib/Makefile.inc,v 1.4 2007/05/21 02:49:02 deischen Exp $
+# $FreeBSD$
 # Default version for system libs (override in <lib>/Makefile if necessary)
 SHLIB_MAJOR?= 5
 
