--- a/lib/clang/Makefile
+++ b/lib/clang/Makefile
@@ -1,11 +1,15 @@
+# $FreeBSD$
+
 .include <src.opts.mk>
 
 # These have to be built in order.
 SUBDIR=		libllvm
+.if ${MK_CLANG} != "no" || ${MK_LLDB} != "no"
 SUBDIR+=	libclang
+SUBDIR+=	headers
+.endif
 .if ${MK_LLDB} != "no"
 SUBDIR+=	liblldb
 .endif
-SUBDIR+=	headers
 
 .include <bsd.subdir.mk>
