--- a/lib/csu/Makefile
+++ b/lib/csu/Makefile
@@ -1,9 +1,14 @@
-# $FreeBSD: stable/11/lib/csu/Makefile 283125 2015-05-19 21:00:53Z emaste $
+# $FreeBSD$
+
+.include <src.opts.mk>
 
 .if exists(${.CURDIR}/${MACHINE_ARCH})
 SUBDIR+= ${MACHINE_ARCH}
 .else
 SUBDIR+= ${MACHINE_CPUARCH}
 .endif
+
+HAS_TESTS=
+SUBDIR.${MK_TESTS}+= tests
 
 .include <bsd.subdir.mk>
