--- a/include/gssapi/Makefile
+++ b/include/gssapi/Makefile
@@ -1,4 +1,4 @@
-# $FreeBSD: stable/11/include/gssapi/Makefile 284255 2015-06-11 04:22:17Z sjg $
+# $FreeBSD$
 
 INCS= gssapi.h
 INCSDIR= ${INCLUDEDIR}/gssapi
