--- a/include/protocols/Makefile
+++ b/include/protocols/Makefile
@@ -1,4 +1,4 @@
-# $FreeBSD: stable/11/include/protocols/Makefile 284255 2015-06-11 04:22:17Z sjg $
+# $FreeBSD$
 
 INCS=	dumprestore.h routed.h rwhod.h talkd.h timed.h
 INCSDIR=${INCLUDEDIR}/protocols
