--- a/release/release.conf.sample
+++ b/release/release.conf.sample
@@ -99,8 +99,8 @@ PORTBRANCH="master"
 
 ## If WITH_VMIMAGES is set to a non-empty value, this is the size of the
 ## virtual machine disk filesystem.  Valid size values are described in
-## the makefs(8) manual page.
-#VMSIZE="20g"
+## the truncate(1) manual page.
+#VMSIZE="20G"
 
 ## If WITH_VMIMAGES is set to a non-empty value, this is a list of disk
 ## image formats to create.  Valid values are listed in the mkimg(1)
