--- a/usr.bin/mkcsmapper/Makefile
+++ b/usr.bin/mkcsmapper/Makefile
@@ -1,10 +1,9 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/mkcsmapper/Makefile 250938 2013-05-23 18:07:01Z ed $
+# $FreeBSD$
 
-.PATH: ${.CURDIR}/../../lib/libc/iconv
+.PATH: ${SRCTOP}/lib/libc/iconv
 
 PROG=	mkcsmapper
-LDFLAGS+= -L${.CURDIR}/../../lib/libc
+LDFLAGS+= -L${SRCTOP}/lib/libc
 
 NO_WMISSING_VARIABLE_DECLARATIONS=
 
