the world is not enough

--- a/etc/mtree/BSD.tests.dist
+++ b/etc/mtree/BSD.tests.dist
@@ -1,4 +1,4 @@
-# $FreeBSD: stable/11/etc/mtree/BSD.tests.dist 355351 2019-12-03 18:55:09Z kevans $
+# $FreeBSD$
 #
 # Please see the file src/etc/mtree/README before making changes to this file.
 #
@@ -11,6 +11,8 @@
         chflags
         ..
         chmod
+        ..
+        cp
         ..
         date
         ..
@@ -34,7 +36,7 @@
         ..
         pwait
         ..
-        rcp
+        rm
         ..
         rmdir
         ..
@@ -46,6 +48,8 @@
             execution
             ..
             expansion
+            ..
+            invocation
             ..
             parameters
             ..
@@ -66,6 +70,8 @@
         ..
         usr.bin
             ctfconvert
+            ..
+            ztest
             ..
         ..
         usr.sbin
@@ -100,6 +106,8 @@
                     dtraceUtil
                     ..
                     end
+                    ..
+                    env
                     ..
                     enum
                     ..
@@ -201,6 +209,8 @@
                     ..
                     struct
                     ..
+                    sugar
+                    ..
                     syscall
                     ..
                     sysevent
@@ -228,6 +238,16 @@
                     vars
                     ..
                     version
+                    ..
+                ..
+                i386
+                    arrays
+                    ..
+                    funcs
+                    ..
+                    pid
+                    ..
+                    ustack
                     ..
                 ..
             ..
@@ -260,6 +280,24 @@
                 ..
             ..
             test-programs
+            ..
+        ..
+        csu
+            dynamic
+            ..
+            dynamiclib
+            ..
+            static
+            ..
+        ..
+        googletest
+            gmock
+            ..
+            gmock_main
+            ..
+            gtest
+            ..
+            gtest_main
             ..
         ..
         libarchive
@@ -350,9 +388,11 @@
         ..
         libnv
         ..
-        libpam
-        ..
         libproc
+        ..
+        libregex
+            data
+            ..
         ..
         librt
         ..
@@ -392,7 +432,17 @@
         ..
         ifconfig
         ..
+        md5
+        ..
         mdconfig
+        ..
+        nvmecontrol
+        ..
+        pfctl
+            files
+            ..
+        ..
+        ping
         ..
     ..
     secure
@@ -409,6 +459,8 @@
         examples
             tests
                 atf
+                ..
+                googletest
                 ..
                 plain
                 ..
@@ -430,11 +482,261 @@
         ..
         capsicum
         ..
+        cddl
+            zfs
+                bin
+                ..
+                include
+                ..
+                tests
+                    acl
+                        cifs
+                        ..
+                        nontrivial
+                        ..
+                        trivial
+                        ..
+                    ..
+                    atime
+                    ..
+                    bootfs
+                    ..
+                    cache
+                    ..
+                    cachefile
+                    ..
+                    clean_mirror
+                    ..
+                    cli_root
+                        zfs_upgrade
+                        ..
+                        zfs_promote
+                        ..
+                        zfs_clone
+                        ..
+                        zfs_property
+                        ..
+                        zfs_destroy
+                        ..
+                        zpool_create
+                        ..
+                        zpool_history
+                        ..
+                        zpool_expand
+                        ..
+                        zpool_remove
+                        ..
+                        zfs_mount
+                        ..
+                        zfs_unshare
+                        ..
+                        zdb
+                        ..
+                        zpool_online
+                        ..
+                        zpool_get
+                        ..
+                        zpool_export
+                        ..
+                        zfs_copies
+                        ..
+                        zfs_get
+                        ..
+                        zfs
+                        ..
+                        zpool_clear
+                        ..
+                        zpool_import
+                            blockfiles
+                            ..
+                        ..
+                        zpool
+                        ..
+                        zpool_offline
+                        ..
+                        zpool_replace
+                        ..
+                        zfs_rollback
+                        ..
+                        zpool_set
+                        ..
+                        zfs_send
+                        ..
+                        zfs_set
+                        ..
+                        zpool_detach
+                        ..
+                        zfs_diff
+                        ..
+                        zpool_scrub
+                        ..
+                        zfs_inherit
+                        ..
+                        zfs_snapshot
+                        ..
+                        zfs_share
+                        ..
+                        zpool_destroy
+                        ..
+                        zpool_status
+                        ..
+                        zfs_unmount
+                        ..
+                        zfs_receive
+                        ..
+                        zfs_create
+                        ..
+                        zpool_upgrade
+                            blockfiles
+                            ..
+                        ..
+                        zpool_add
+                        ..
+                        zfs_rename
+                        ..
+                        zpool_attach
+                        ..
+                        zfs_reservation
+                        ..
+                    ..
+                    cli_user
+                        misc
+                        ..
+                        zfs_list
+                        ..
+                        zpool_iostat
+                        ..
+                        zpool_list
+                        ..
+                    ..
+                    compression
+                    ..
+                    ctime
+                    ..
+                    delegate
+                    ..
+                    devices
+                    ..
+                    exec
+                    ..
+                    grow_pool
+                    ..
+                    grow_replicas
+                    ..
+                    history
+                    ..
+                    hotplug
+                    ..
+                    hotspare
+                    ..
+                    inheritance
+                    ..
+                    interop
+                    ..
+                    inuse
+                    ..
+                    iscsi
+                    ..
+                    large_files
+                    ..
+                    largest_pool
+                    ..
+                    link_count
+                    ..
+                    migration
+                    ..
+                    mmap
+                    ..
+                    mount
+                    ..
+                    mv_files
+                    ..
+                    nestedfs
+                    ..
+                    no_space
+                    ..
+                    online_offline
+                    ..
+                    pool_names
+                    ..
+                    poolversion
+                    ..
+                    quota
+                    ..
+                    redundancy
+                    ..
+                    refquota
+                    ..
+                    refreserv
+                    ..
+                    rename_dirs
+                    ..
+                    replacement
+                    ..
+                    reservation
+                    ..
+                    rootpool
+                    ..
+                    rsend
+                    ..
+                    scrub_mirror
+                    ..
+                    slog
+                    ..
+                    snapshot
+                    ..
+                    snapused
+                    ..
+                    sparse
+                    ..
+                    threadsappend
+                    ..
+                    truncate
+                    ..
+                    txg_integrity
+                    ..
+                    userquota
+                    ..
+                    utils_test
+                    ..
+                    write_dirs
+                    ..
+                    xattr
+                    ..
+                    zfsd
+                    ..
+                    zil
+                    ..
+                    zinject
+                    ..
+                    zones
+                    ..
+                    zvol
+                        zvol_ENOSPC
+                        ..
+                        zvol_cli
+                        ..
+                        zvol_misc
+                        ..
+                        zvol_swap
+                        ..
+                    ..
+                    zvol_thrash
+                    ..
+                ..
+            ..
+        ..
+        devrandom
+        ..
+        dtrace
+        ..
         fifo
         ..
         file
         ..
         fs
+            fusefs
+            ..
             tmpfs
             ..
         ..
@@ -449,6 +751,8 @@
                 gpt
                 ..
                 mirror
+                ..
+                multipath
                 ..
                 nop
                 ..
@@ -488,9 +792,27 @@
         ..
         net
         ..
+        netgraph
+        ..
         netinet
         ..
-        netmap
+        netinet6
+            frag6
+            ..
+        ..
+        netipsec
+            tunnel
+            ..
+        ..
+    netmap
+    ..
+        netpfil
+            common
+            ..
+            pf
+                ioctl
+                ..
+            ..
         ..
         opencrypto
         ..
@@ -525,6 +847,8 @@
             ..
             unlink
             ..
+            utimensat
+            ..
         ..
         posixshm
         ..
@@ -537,6 +861,8 @@
     ..
     usr.bin
         apply
+        ..
+        awk
         ..
         basename
         ..
@@ -652,7 +978,13 @@
         ..
         comm
         ..
+        csplit
+        ..
         cut
+        ..
+        dc
+        ..
+        diff
         ..
         dirname
         ..
@@ -660,9 +992,13 @@
         ..
         file2c
         ..
+        find
+        ..
         fold
         ..
         getconf
+        ..
+        gh-bc
         ..
         grep
         ..
@@ -683,6 +1019,8 @@
         lastcomm
         ..
         limits
+        ..
+        locale
         ..
         m4
         ..
@@ -732,6 +1070,8 @@
         ..
         uniq
         ..
+        vmstat
+        ..
         xargs
         ..
         xinstall
@@ -746,6 +1086,8 @@
     usr.sbin
         chown
         ..
+        daemon
+        ..
         etcupdate
         ..
         extattr
@@ -755,6 +1097,8 @@
         jail
         ..
         makefs
+        ..
+        mixer
         ..
         newsyslog
         ..
