--- a/etc/mail/mailer.conf
+++ b/etc/mail/mailer.conf
@@ -1,7 +1,9 @@
-# $MidnightBSD$
-# $FreeBSD: src/etc/mail/mailer.conf,v 1.3 2002/04/05 04:25:12 gshapiro Exp $
+# $FreeBSD$
 #
 # Execute the "real" sendmail program, named /usr/libexec/sendmail/sendmail
+#
+# If dma(8) is installed, an example mailer.conf that uses dma(8) instead can
+# can be found in /usr/share/examples/dma.
 #
 sendmail	/usr/libexec/sendmail/sendmail
 mailq		/usr/libexec/sendmail/sendmail
