--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -13,7 +13,23 @@
         private
             bsdstat
             ..
+            event
+            ..
+            gmock
+                internal
+                    custom
+                    ..
+                ..
+            ..
+            gtest
+                internal
+                    custom
+                    ..
+                ..
+            ..
             ucl
+            ..
+            zstd
             ..
         ..
     ..
@@ -52,6 +68,8 @@
         ..
         engines
         ..
+        flua
+        ..
         i18n
         ..
         libxo
@@ -67,8 +85,6 @@
         gcc
         ..
         ldscripts
-        ..
-        lint
         ..
         pkgconfig
         ..
@@ -210,8 +226,6 @@
             IPv6
             ..
             atf
-            ..
-            atm
             ..
             legal
             ..
@@ -764,6 +778,8 @@
             fr_FR.ISO8859-15
             ..
             fr_FR.UTF-8
+            ..
+            ga_IE.UTF-8
             ..
             he_IL.UTF-8
             ..
