--- a/lib/libmagic/Makefile
+++ b/lib/libmagic/Makefile
@@ -1,8 +1,9 @@
-# $FreeBSD: stable/11/lib/libmagic/Makefile 354939 2019-11-21 07:39:33Z delphij $
+# $FreeBSD$
 # Copyright (c) David E. O'Brien, 2000-2004, 2006, 2009
 
 PACKAGE=lib${LIB}
 CONTRDIR=	${SRCTOP}/contrib/file
+.PATH: ${CONTRDIR}
 .PATH: ${CONTRDIR}/src
 .PATH: ${CONTRDIR}/doc
 
@@ -35,17 +36,38 @@ MAGFILES=	${CONTRDIR}/magic/Header \
 		${CONTRDIR}/magic/Localstuff \
 		${CONTRDIR}/magic/Magdir/[a-z]*
 
+
+PACKAGE_VERSION!=	sed -n '/define.*PACKAGE_VERSION/{s,[^0-9.],,gp;q;}' ${.CURDIR}/config.h
+
+libmagic.pc: libmagic.pc.in
+	sed -e 's,@prefix@,/usr,g ; \
+		s,@exec_prefix@,$${prefix},g ; \
+		s,@libdir@,$${exec_prefix}/lib,g ; \
+		s,@sharedlibdir@,$${libdir},g ; \
+		s,@includedir@,$${prefix}/include,g ; \
+		s,@VERSION@,${PACKAGE_VERSION},g ; \
+		s,@LIBS@,,g ;' \
+                ${.ALLSRC} > ${.TARGET}
+
 magic: ${MAGFILES}
 	cat ${.ALLSRC:O} > ${.TARGET}
 
-magic.mgc: mkmagic magic
+magic.mgc: magic
 	${BTOOLSPATH:U.}/mkmagic magic
 
+.if ${MACHINE} == "host" || ${MK_DIRDEPS_BUILD} == "no"
 CLEANFILES+=	mkmagic
 build-tools: mkmagic
 mkmagic: apprentice.c cdf_time.c encoding.c funcs.c magic.c print.c ${INCS} ${BUILD_TOOLS_META}
 	${CC:N${CCACHE_BIN}} ${CFLAGS} -DCOMPILE_ONLY ${LDFLAGS} -o ${.TARGET} ${.ALLSRC:N*.h} \
 	    ${LDADD}
+
+.endif
+.if ${MK_DIRDEPS_BUILD} == "yes"
+BTOOLSPATH= ${HOST_OBJTOP}/${RELDIR}
+.else
+magic.mgc: mkmagic
+.endif
 
 FILEVER!= awk '$$1 == "\#define" && $$2 == "VERSION" { print $$3; exit }' \
 			${.CURDIR}/config.h
@@ -62,5 +84,8 @@ CLEANFILES+=	${INCS}
 ${inc}: ${inc}.in
 	sed -e 's,X.YY,${FILEVER:S,",,g:S,.,,g},g' ${.ALLSRC} > ${.TARGET}
 .endfor
+
+FILES+=			libmagic.pc
+FILESDIR_libmagic.pc=	${LIBDATADIR}/pkgconfig
 
 .include <bsd.lib.mk>
