--- a/lib/clang/headers/Makefile
+++ b/lib/clang/headers/Makefile
@@ -1,17 +1,14 @@
+# $FreeBSD$
 
 .include "../clang.pre.mk"
 
 .PATH:		${CLANG_SRCS}/lib/Headers
 
 INCSGROUPS=	INCS CUDA OMP PPC
-INCSDIR=	${LIBDIR}/clang/10.0.1/include
+INCSDIR=	${LIBDIR}/clang/13.0.0/include
 CUDADIR=	${INCSDIR}/cuda_wrappers
 OMPDIR=		${INCSDIR}/openmp_wrappers
 PPCDIR=		${INCSDIR}/ppc_wrappers
-
-GENINCS+=	arm_fp16.h
-GENINCS+=	arm_mve.h
-GENINCS+=	arm_neon.h
 
 INCS+=		__clang_cuda_builtin_vars.h
 INCS+=		__clang_cuda_cmath.h
@@ -19,14 +16,20 @@ INCS+=		__clang_cuda_complex_builtins.h
 INCS+=		__clang_cuda_device_functions.h
 INCS+=		__clang_cuda_intrinsics.h
 INCS+=		__clang_cuda_libdevice_declares.h
+INCS+=		__clang_cuda_math.h
 INCS+=		__clang_cuda_math_forward_declares.h
 INCS+=		__clang_cuda_runtime_wrapper.h
+INCS+=		__clang_hip_cmath.h
+INCS+=		__clang_hip_libdevice_declares.h
+INCS+=		__clang_hip_math.h
+INCS+=		__clang_hip_runtime_wrapper.h
 INCS+=		__stddef_max_align_t.h
 INCS+=		__wmmintrin_aes.h
 INCS+=		__wmmintrin_pclmul.h
 INCS+=		adxintrin.h
 INCS+=		altivec.h
 INCS+=		ammintrin.h
+INCS+=		amxintrin.h
 INCS+=		arm64intr.h
 INCS+=		arm_acle.h
 INCS+=		arm_cmse.h
@@ -59,8 +62,11 @@ INCS+=		avx512vp2intersectintrin.h
 INCS+=		avx512vpopcntdqintrin.h
 INCS+=		avx512vpopcntdqvlintrin.h
 INCS+=		avxintrin.h
+INCS+=		avxvnniintrin.h
 INCS+=		bmi2intrin.h
 INCS+=		bmiintrin.h
+INCS+=		builtins.h
+INCS+=		cet.h
 INCS+=		cetintrin.h
 INCS+=		cldemoteintrin.h
 INCS+=		clflushoptintrin.h
@@ -74,11 +80,17 @@ INCS+=		fma4intrin.h
 INCS+=		fmaintrin.h
 INCS+=		fxsrintrin.h
 INCS+=		gfniintrin.h
+INCS+=		hexagon_circ_brev_intrinsics.h
+INCS+=		hexagon_protos.h
+INCS+=		hexagon_types.h
+INCS+=		hresetintrin.h
 INCS+=		htmintrin.h
 INCS+=		htmxlintrin.h
+INCS+=		hvx_hexagon_protos.h
 INCS+=		ia32intrin.h
 INCS+=		immintrin.h
 INCS+=		invpcidintrin.h
+INCS+=		keylockerintrin.h
 INCS+=		lwpintrin.h
 INCS+=		lzcntintrin.h
 INCS+=		mm3dnow.h
@@ -100,18 +112,23 @@ INCS+=		ptwriteintrin.h
 INCS+=		rdseedintrin.h
 INCS+=		rtmintrin.h
 INCS+=		s390intrin.h
+INCS+=		serializeintrin.h
 INCS+=		sgxintrin.h
 INCS+=		shaintrin.h
 INCS+=		smmintrin.h
 INCS+=		tbmintrin.h
 INCS+=		tmmintrin.h
+INCS+=		tsxldtrkintrin.h
+INCS+=		uintrintrin.h
 INCS+=		vadefs.h
 INCS+=		vaesintrin.h
 INCS+=		vecintrin.h
 INCS+=		vpclmulqdqintrin.h
 INCS+=		waitpkgintrin.h
+INCS+=		wasm_simd128.h
 INCS+=		wbnoinvdintrin.h
 INCS+=		wmmintrin.h
+INCS+=		x86gprintrin.h
 INCS+=		x86intrin.h
 INCS+=		xmmintrin.h
 INCS+=		xopintrin.h
@@ -123,7 +140,7 @@ INCS+=		xtestintrin.h
 INCS+=		${GENINCS}
 
 # Headers which possibly conflict with our own versions:
-.if defined(INSTALL_CONFLICTING_CLANG_HEADERS)
+.ifdef INSTALL_CONFLICTING_CLANG_HEADERS
 INCS+=		float.h
 INCS+=		intrin.h
 INCS+=		inttypes.h
@@ -137,17 +154,21 @@ INCS+=		stddef.h
 INCS+=		stdint.h
 INCS+=		stdnoreturn.h
 INCS+=		tgmath.h
+INCS+=		unwind.h
 INCS+=		varargs.h
-.endif
+.endif # INSTALL_CONFLICTING_CLANG_HEADERS
 
 CUDA+=		cuda_wrappers/algorithm
 CUDA+=		cuda_wrappers/complex
 CUDA+=		cuda_wrappers/new
 
-OMP+=		openmp_wrappers/__clang_openmp_math.h
-OMP+=		openmp_wrappers/__clang_openmp_math_declares.h
+OMP+=		openmp_wrappers/__clang_openmp_device_functions.h
 OMP+=		openmp_wrappers/cmath
+OMP+=		openmp_wrappers/complex
+OMP+=		openmp_wrappers/complex.h
+OMP+=		openmp_wrappers/complex_cmath.h
 OMP+=		openmp_wrappers/math.h
+OMP+=		openmp_wrappers/new
 
 PPC+=		ppc_wrappers/emmintrin.h
 PPC+=		ppc_wrappers/mm_malloc.h
@@ -157,20 +178,22 @@ PPC+=		ppc_wrappers/smmintrin.h
 PPC+=		ppc_wrappers/tmmintrin.h
 PPC+=		ppc_wrappers/xmmintrin.h
 
-arm_fp16.h: ${CLANG_SRCS}/include/clang/Basic/arm_fp16.td
-	${CLANG_TBLGEN} -gen-arm-fp16 \
+.for hdr in bf16/bf16 cde/cde-header fp16/fp16 mve/mve-header neon/neon \
+	sve/sve-header
+arm_${hdr:H}.h: ${CLANG_SRCS}/include/clang/Basic/arm_${hdr:H}.td
+	${CLANG_TBLGEN} -gen-arm-${hdr:T} \
 	    -I ${CLANG_SRCS}/include/clang/Basic -d ${.TARGET:C/$/.d/} \
-	    -o ${.TARGET} ${CLANG_SRCS}/include/clang/Basic/arm_fp16.td
+	    -o ${.TARGET} ${CLANG_SRCS}/include/clang/Basic/arm_${hdr:H}.td
+GENINCS+=	arm_${hdr:H}.h
+.endfor
 
-arm_mve.h: ${CLANG_SRCS}/include/clang/Basic/arm_mve.td
-	${CLANG_TBLGEN} -gen-arm-mve-header \
+.for hdr in vector/vector-header
+riscv_${hdr:H}.h: ${CLANG_SRCS}/include/clang/Basic/riscv_${hdr:H}.td
+	${CLANG_TBLGEN} -gen-riscv-${hdr:T} \
 	    -I ${CLANG_SRCS}/include/clang/Basic -d ${.TARGET:C/$/.d/} \
-	    -o ${.TARGET} ${CLANG_SRCS}/include/clang/Basic/arm_mve.td
-
-arm_neon.h: ${CLANG_SRCS}/include/clang/Basic/arm_neon.td
-	${CLANG_TBLGEN} -gen-arm-neon \
-	    -I ${CLANG_SRCS}/include/clang/Basic -d ${.TARGET:C/$/.d/} \
-	    -o ${.TARGET} ${CLANG_SRCS}/include/clang/Basic/arm_neon.td
+	    -o ${.TARGET} ${CLANG_SRCS}/include/clang/Basic/riscv_${hdr:H}.td
+GENINCS+=	riscv_${hdr:H}.h
+.endfor
 
 CLEANFILES=	${GENINCS} ${GENINCS:C/$/.d/}
 
