--- a/lib/atf/libatf-c/tests/Makefile.inc
+++ b/lib/atf/libatf-c/tests/Makefile.inc
@@ -1,3 +1,3 @@
-# $FreeBSD: stable/11/lib/atf/libatf-c/tests/Makefile.inc 260525 2014-01-10 23:38:33Z jmmv $
+# $FreeBSD$
 
 .include "../Makefile.inc"
