--- a/lib/clang/libclang/Makefile
+++ b/lib/clang/libclang/Makefile
@@ -1,3 +1,5 @@
+# $FreeBSD$
+
 .include <src.opts.mk>
 .include "../clang.pre.mk"
 
@@ -63,6 +65,7 @@ SRCS_MIN+=	AST/CommentLexer.cpp
 SRCS_MIN+=	AST/CommentParser.cpp
 SRCS_MIN+=	AST/CommentSema.cpp
 SRCS_MIN+=	AST/ComparisonCategories.cpp
+SRCS_MIN+=	AST/ComputeDependence.cpp
 SRCS_FUL+=	AST/DataCollection.cpp
 SRCS_MIN+=	AST/Decl.cpp
 SRCS_MIN+=	AST/DeclBase.cpp
@@ -84,7 +87,6 @@ SRCS_LDB+=	AST/ExternalASTMerger.cpp
 SRCS_MIN+=	AST/ExternalASTSource.cpp
 SRCS_MIN+=	AST/FormatString.cpp
 SRCS_MIN+=	AST/InheritViz.cpp
-SRCS_MIN+=	AST/Interp/Block.cpp
 SRCS_MIN+=	AST/Interp/ByteCodeEmitter.cpp
 SRCS_MIN+=	AST/Interp/ByteCodeExprGen.cpp
 SRCS_MIN+=	AST/Interp/ByteCodeGenError.cpp
@@ -95,6 +97,7 @@ SRCS_MIN+=	AST/Interp/EvalEmitter.cpp
 SRCS_MIN+=	AST/Interp/Frame.cpp
 SRCS_MIN+=	AST/Interp/Function.cpp
 SRCS_MIN+=	AST/Interp/Interp.cpp
+SRCS_MIN+=	AST/Interp/InterpBlock.cpp
 SRCS_MIN+=	AST/Interp/InterpFrame.cpp
 SRCS_MIN+=	AST/Interp/InterpStack.cpp
 SRCS_MIN+=	AST/Interp/InterpState.cpp
@@ -116,6 +119,7 @@ SRCS_MIN+=	AST/ODRHash.cpp
 SRCS_MIN+=	AST/OSLog.cpp
 SRCS_MIN+=	AST/OpenMPClause.cpp
 SRCS_MIN+=	AST/ParentMap.cpp
+SRCS_MIN+=	AST/ParentMapContext.cpp
 SRCS_MIN+=	AST/PrintfFormatString.cpp
 SRCS_MIN+=	AST/QualTypeNames.cpp
 SRCS_MIN+=	AST/RawCommentList.cpp
@@ -149,6 +153,7 @@ SRCS_MIN+=	Analysis/CFG.cpp
 SRCS_MIN+=	Analysis/CFGReachabilityAnalysis.cpp
 SRCS_MIN+=	Analysis/CFGStmtMap.cpp
 SRCS_FUL+=	Analysis/CallGraph.cpp
+SRCS_MIN+=	Analysis/CalledOnceCheck.cpp
 SRCS_MIN+=	Analysis/CloneDetection.cpp
 SRCS_MIN+=	Analysis/CocoaConventions.cpp
 SRCS_FUL+=	Analysis/CodeInjector.cpp
@@ -156,7 +161,9 @@ SRCS_MIN+=	Analysis/Consumed.cpp
 SRCS_MIN+=	Analysis/ConstructionContext.cpp
 SRCS_FUL+=	Analysis/Dominators.cpp
 SRCS_MIN+=	Analysis/ExprMutationAnalyzer.cpp
+SRCS_FUL+=	Analysis/IssueHash.cpp
 SRCS_MIN+=	Analysis/LiveVariables.cpp
+SRCS_FUL+=	Analysis/MacroExpansionContext.cpp
 SRCS_MIN+=	Analysis/ObjCNoReturn.cpp
 SRCS_FUL+=	Analysis/PathDiagnostic.cpp
 SRCS_MIN+=	Analysis/PostOrderCFGView.cpp
@@ -172,25 +179,30 @@ SRCS_MIN+=	Basic/Builtins.cpp
 SRCS_MIN+=	Basic/CharInfo.cpp
 SRCS_MIN+=	Basic/CodeGenOptions.cpp
 SRCS_MIN+=	Basic/Cuda.cpp
+SRCS_MIN+=	Basic/DarwinSDKInfo.cpp
 SRCS_MIN+=	Basic/Diagnostic.cpp
 SRCS_MIN+=	Basic/DiagnosticIDs.cpp
 SRCS_MIN+=	Basic/DiagnosticOptions.cpp
+SRCS_MIN+=	Basic/ExpressionTraits.cpp
+SRCS_MIN+=	Basic/FileEntry.cpp
 SRCS_MIN+=	Basic/FileManager.cpp
 SRCS_MIN+=	Basic/FileSystemStatCache.cpp
-SRCS_MIN+=	Basic/FixedPoint.cpp
 SRCS_MIN+=	Basic/IdentifierTable.cpp
 SRCS_MIN+=	Basic/LangOptions.cpp
 SRCS_MIN+=	Basic/LangStandards.cpp
 SRCS_MIN+=	Basic/Module.cpp
+SRCS_MIN+=	Basic/NoSanitizeList.cpp
 SRCS_MIN+=	Basic/ObjCRuntime.cpp
+SRCS_MIN+=	Basic/OpenCLOptions.cpp
 SRCS_MIN+=	Basic/OpenMPKinds.cpp
 SRCS_MIN+=	Basic/OperatorPrecedence.cpp
-SRCS_MIN+=	Basic/SanitizerBlacklist.cpp
+SRCS_MIN+=	Basic/ProfileList.cpp
 SRCS_MIN+=	Basic/SanitizerSpecialCaseList.cpp
 SRCS_MIN+=	Basic/Sanitizers.cpp
 SRCS_MIN+=	Basic/SourceLocation.cpp
 SRCS_MIN+=	Basic/SourceManager.cpp
 SRCS_MIN+=	Basic/Stack.cpp
+SRCS_MIN+=	Basic/TargetID.cpp
 SRCS_MIN+=	Basic/TargetInfo.cpp
 SRCS_MIN+=	Basic/Targets.cpp
 SRCS_MIN+=	Basic/Targets/AArch64.cpp
@@ -202,8 +214,9 @@ SRCS_MIN+=	Basic/Targets/BPF.cpp
 SRCS_MIN+=	Basic/Targets/Hexagon.cpp
 SRCS_MIN+=	Basic/Targets/Lanai.cpp
 SRCS_MIN+=	Basic/Targets/Le64.cpp
-SRCS_MIN+=	Basic/Targets/MSP430.cpp
+SRCS_MIN+=	Basic/Targets/M68k.cpp
 SRCS_MIN+=	Basic/Targets/Mips.cpp
+SRCS_MIN+=	Basic/Targets/MSP430.cpp
 SRCS_MIN+=	Basic/Targets/NVPTX.cpp
 SRCS_MIN+=	Basic/Targets/OSTargets.cpp
 SRCS_MIN+=	Basic/Targets/PNaCl.cpp
@@ -213,10 +226,12 @@ SRCS_MIN+=	Basic/Targets/SPIR.cpp
 SRCS_MIN+=	Basic/Targets/Sparc.cpp
 SRCS_MIN+=	Basic/Targets/SystemZ.cpp
 SRCS_MIN+=	Basic/Targets/TCE.cpp
+SRCS_MIN+=	Basic/Targets/VE.cpp
 SRCS_MIN+=	Basic/Targets/WebAssembly.cpp
 SRCS_MIN+=	Basic/Targets/X86.cpp
 SRCS_MIN+=	Basic/Targets/XCore.cpp
 SRCS_MIN+=	Basic/TokenKinds.cpp
+SRCS_MIN+=	Basic/TypeTraits.cpp
 SRCS_MIN+=	Basic/Version.cpp
 SRCS_MIN+=	Basic/Warnings.cpp
 SRCS_MIN+=	Basic/XRayInstr.cpp
@@ -252,6 +267,8 @@ SRCS_MIN+=	CodeGen/CGObjCMac.cpp
 SRCS_MIN+=	CodeGen/CGObjCRuntime.cpp
 SRCS_MIN+=	CodeGen/CGOpenCLRuntime.cpp
 SRCS_MIN+=	CodeGen/CGOpenMPRuntime.cpp
+SRCS_MIN+=	CodeGen/CGOpenMPRuntimeAMDGCN.cpp
+SRCS_MIN+=	CodeGen/CGOpenMPRuntimeGPU.cpp
 SRCS_MIN+=	CodeGen/CGOpenMPRuntimeNVPTX.cpp
 SRCS_MIN+=	CodeGen/CGRecordLayoutBuilder.cpp
 SRCS_MIN+=	CodeGen/CGStmt.cpp
@@ -279,7 +296,6 @@ SRCS_MIN+=	CodeGen/VarBypassDetector.cpp
 SRCS_FUL+=	CrossTU/CrossTranslationUnit.cpp
 SRCS_MIN+=	Driver/Action.cpp
 SRCS_MIN+=	Driver/Compilation.cpp
-SRCS_MIN+=	Driver/DarwinSDKInfo.cpp
 SRCS_MIN+=	Driver/Distro.cpp
 SRCS_MIN+=	Driver/Driver.cpp
 SRCS_MIN+=	Driver/DriverOptions.cpp
@@ -292,15 +308,18 @@ SRCS_MIN+=	Driver/Tool.cpp
 SRCS_MIN+=	Driver/ToolChain.cpp
 SRCS_MIN+=	Driver/ToolChains/AIX.cpp
 SRCS_MIN+=	Driver/ToolChains/AMDGPU.cpp
+SRCS_MIN+=	Driver/ToolChains/AMDGPUOpenMP.cpp
 SRCS_MIN+=	Driver/ToolChains/AVR.cpp
 SRCS_MIN+=	Driver/ToolChains/Ananas.cpp
 SRCS_MIN+=	Driver/ToolChains/Arch/AArch64.cpp
 SRCS_MIN+=	Driver/ToolChains/Arch/ARM.cpp
+SRCS_MIN+=	Driver/ToolChains/Arch/M68k.cpp
 SRCS_MIN+=	Driver/ToolChains/Arch/Mips.cpp
 SRCS_MIN+=	Driver/ToolChains/Arch/PPC.cpp
 SRCS_MIN+=	Driver/ToolChains/Arch/RISCV.cpp
 SRCS_MIN+=	Driver/ToolChains/Arch/Sparc.cpp
 SRCS_MIN+=	Driver/ToolChains/Arch/SystemZ.cpp
+SRCS_MIN+=	Driver/ToolChains/Arch/VE.cpp
 SRCS_MIN+=	Driver/ToolChains/Arch/X86.cpp
 SRCS_MIN+=	Driver/ToolChains/BareMetal.cpp
 SRCS_MIN+=	Driver/ToolChains/Clang.cpp
@@ -335,8 +354,10 @@ SRCS_MIN+=	Driver/ToolChains/PS4CPU.cpp
 SRCS_MIN+=	Driver/ToolChains/RISCVToolchain.cpp
 SRCS_MIN+=	Driver/ToolChains/Solaris.cpp
 SRCS_MIN+=	Driver/ToolChains/TCE.cpp
+SRCS_MIN+=	Driver/ToolChains/VEToolchain.cpp
 SRCS_MIN+=	Driver/ToolChains/WebAssembly.cpp
 SRCS_MIN+=	Driver/ToolChains/XCore.cpp
+SRCS_MIN+=	Driver/ToolChains/ZOS.cpp
 SRCS_MIN+=	Driver/Types.cpp
 SRCS_MIN+=	Driver/XRayArgs.cpp
 SRCS_MIN+=	Edit/Commit.cpp
@@ -370,7 +391,6 @@ SRCS_MIN+=	Frontend/DiagnosticRenderer.cpp
 SRCS_MIN+=	Frontend/FrontendAction.cpp
 SRCS_MIN+=	Frontend/FrontendActions.cpp
 SRCS_MIN+=	Frontend/FrontendOptions.cpp
-SRCS_MIN+=	Frontend/FrontendTiming.cpp
 SRCS_MIN+=	Frontend/HeaderIncludeGen.cpp
 SRCS_MIN+=	Frontend/InitHeaderSearch.cpp
 SRCS_MIN+=	Frontend/InitPreprocessor.cpp
@@ -458,6 +478,7 @@ SRCS_MIN+=	Sema/ScopeInfo.cpp
 SRCS_MIN+=	Sema/Sema.cpp
 SRCS_MIN+=	Sema/SemaAccess.cpp
 SRCS_MIN+=	Sema/SemaAttr.cpp
+SRCS_MIN+=	Sema/SemaAvailability.cpp
 SRCS_MIN+=	Sema/SemaCUDA.cpp
 SRCS_MIN+=	Sema/SemaCXXScopeSpec.cpp
 SRCS_MIN+=	Sema/SemaCast.cpp
@@ -484,6 +505,7 @@ SRCS_MIN+=	Sema/SemaObjCProperty.cpp
 SRCS_MIN+=	Sema/SemaOpenMP.cpp
 SRCS_MIN+=	Sema/SemaOverload.cpp
 SRCS_MIN+=	Sema/SemaPseudoObject.cpp
+SRCS_MIN+=	Sema/SemaSYCL.cpp
 SRCS_MIN+=	Sema/SemaStmt.cpp
 SRCS_MIN+=	Sema/SemaStmtAsm.cpp
 SRCS_MIN+=	Sema/SemaStmtAttr.cpp
@@ -531,9 +553,11 @@ SRCS_FUL+=	StaticAnalyzer/Checkers/CheckSecuritySyntaxOnly.cpp
 SRCS_FUL+=	StaticAnalyzer/Checkers/CheckSizeofPointer.cpp
 SRCS_FUL+=	StaticAnalyzer/Checkers/ChrootChecker.cpp
 SRCS_FUL+=	StaticAnalyzer/Checkers/CloneChecker.cpp
+SRCS_FUL+=	StaticAnalyzer/Checkers/ContainerModeling.cpp
 SRCS_FUL+=	StaticAnalyzer/Checkers/ConversionChecker.cpp
 SRCS_FUL+=	StaticAnalyzer/Checkers/DeadStoresChecker.cpp
 SRCS_FUL+=	StaticAnalyzer/Checkers/DebugCheckers.cpp
+SRCS_FUL+=	StaticAnalyzer/Checkers/DebugContainerModeling.cpp
 SRCS_FUL+=	StaticAnalyzer/Checkers/DebugIteratorModeling.cpp
 SRCS_FUL+=	StaticAnalyzer/Checkers/DeleteWithNonVirtualDtorChecker.cpp
 SRCS_FUL+=	StaticAnalyzer/Checkers/DereferenceChecker.cpp
@@ -597,7 +621,9 @@ SRCS_FUL+=	StaticAnalyzer/Checkers/ReturnPointerRangeChecker.cpp
 SRCS_FUL+=	StaticAnalyzer/Checkers/ReturnUndefChecker.cpp
 SRCS_FUL+=	StaticAnalyzer/Checkers/ReturnValueChecker.cpp
 SRCS_FUL+=	StaticAnalyzer/Checkers/RunLoopAutoreleaseLeakChecker.cpp
+SRCS_FUL+=	StaticAnalyzer/Checkers/STLAlgorithmModeling.cpp
 SRCS_FUL+=	StaticAnalyzer/Checkers/SimpleStreamChecker.cpp
+SRCS_FUL+=	StaticAnalyzer/Checkers/SmartPtrChecker.cpp
 SRCS_FUL+=	StaticAnalyzer/Checkers/SmartPtrModeling.cpp
 SRCS_FUL+=	StaticAnalyzer/Checkers/StackAddrEscapeChecker.cpp
 SRCS_FUL+=	StaticAnalyzer/Checkers/StdLibraryFunctionsChecker.cpp
@@ -620,6 +646,14 @@ SRCS_FUL+=	StaticAnalyzer/Checkers/VLASizeChecker.cpp
 SRCS_FUL+=	StaticAnalyzer/Checkers/ValistChecker.cpp
 SRCS_FUL+=	StaticAnalyzer/Checkers/VforkChecker.cpp
 SRCS_FUL+=	StaticAnalyzer/Checkers/VirtualCallChecker.cpp
+SRCS_FUL+=	StaticAnalyzer/Checkers/cert/PutenvWithAutoChecker.cpp
+SRCS_FUL+=	StaticAnalyzer/Checkers/WebKit/ASTUtils.cpp
+SRCS_FUL+=	StaticAnalyzer/Checkers/WebKit/NoUncountedMembersChecker.cpp
+SRCS_FUL+=	StaticAnalyzer/Checkers/WebKit/PtrTypesSemantics.cpp
+SRCS_FUL+=	StaticAnalyzer/Checkers/WebKit/RefCntblBaseVirtualDtorChecker.cpp
+SRCS_FUL+=	StaticAnalyzer/Checkers/WebKit/UncountedCallArgsChecker.cpp
+SRCS_FUL+=	StaticAnalyzer/Checkers/WebKit/UncountedLambdaCapturesChecker.cpp
+SRCS_FUL+=	StaticAnalyzer/Checkers/WebKit/UncountedLocalVarsChecker.cpp
 SRCS_FUL+=	StaticAnalyzer/Core/APSIntType.cpp
 SRCS_FUL+=	StaticAnalyzer/Core/AnalysisManager.cpp
 SRCS_FUL+=	StaticAnalyzer/Core/AnalyzerOptions.cpp
@@ -632,9 +666,11 @@ SRCS_FUL+=	StaticAnalyzer/Core/Checker.cpp
 SRCS_FUL+=	StaticAnalyzer/Core/CheckerContext.cpp
 SRCS_FUL+=	StaticAnalyzer/Core/CheckerHelpers.cpp
 SRCS_FUL+=	StaticAnalyzer/Core/CheckerManager.cpp
+SRCS_FUL+=	StaticAnalyzer/Core/CheckerRegistryData.cpp
 SRCS_FUL+=	StaticAnalyzer/Core/CommonBugCategories.cpp
 SRCS_FUL+=	StaticAnalyzer/Core/ConstraintManager.cpp
 SRCS_FUL+=	StaticAnalyzer/Core/CoreEngine.cpp
+SRCS_FUL+=	StaticAnalyzer/Core/DynamicExtent.cpp
 SRCS_FUL+=	StaticAnalyzer/Core/DynamicType.cpp
 SRCS_FUL+=	StaticAnalyzer/Core/Environment.cpp
 SRCS_FUL+=	StaticAnalyzer/Core/ExplodedGraph.cpp
@@ -645,7 +681,6 @@ SRCS_FUL+=	StaticAnalyzer/Core/ExprEngineCallAndReturn.cpp
 SRCS_FUL+=	StaticAnalyzer/Core/ExprEngineObjC.cpp
 SRCS_FUL+=	StaticAnalyzer/Core/FunctionSummary.cpp
 SRCS_FUL+=	StaticAnalyzer/Core/HTMLDiagnostics.cpp
-SRCS_FUL+=	StaticAnalyzer/Core/IssueHash.cpp
 SRCS_FUL+=	StaticAnalyzer/Core/LoopUnrolling.cpp
 SRCS_FUL+=	StaticAnalyzer/Core/LoopWidening.cpp
 SRCS_FUL+=	StaticAnalyzer/Core/MemRegion.cpp
@@ -661,20 +696,20 @@ SRCS_FUL+=	StaticAnalyzer/Core/SarifDiagnostics.cpp
 SRCS_FUL+=	StaticAnalyzer/Core/SimpleConstraintManager.cpp
 SRCS_FUL+=	StaticAnalyzer/Core/SimpleSValBuilder.cpp
 SRCS_FUL+=	StaticAnalyzer/Core/Store.cpp
-SRCS_FUL+=	StaticAnalyzer/Core/SubEngine.cpp
 SRCS_FUL+=	StaticAnalyzer/Core/SymbolManager.cpp
+SRCS_FUL+=	StaticAnalyzer/Core/TextDiagnostics.cpp
 SRCS_FUL+=	StaticAnalyzer/Core/WorkList.cpp
 SRCS_FUL+=	StaticAnalyzer/Frontend/AnalysisConsumer.cpp
-SRCS_FUL+=	StaticAnalyzer/Frontend/CheckerRegistration.cpp
+SRCS_FUL+=	StaticAnalyzer/Frontend/AnalyzerHelpFlags.cpp
 SRCS_FUL+=	StaticAnalyzer/Frontend/CheckerRegistry.cpp
+SRCS_FUL+=	StaticAnalyzer/Frontend/CreateCheckerManager.cpp
 SRCS_FUL+=	StaticAnalyzer/Frontend/FrontendActions.cpp
 SRCS_FUL+=	StaticAnalyzer/Frontend/ModelConsumer.cpp
 SRCS_FUL+=	StaticAnalyzer/Frontend/ModelInjector.cpp
 SRCS_MIN+=	Tooling/ArgumentsAdjusters.cpp
 SRCS_MIN+=	Tooling/CommonOptionsParser.cpp
 SRCS_MIN+=	Tooling/CompilationDatabase.cpp
-SRCS_MIN+=	Tooling/Core/Lookup.cpp
-SRCS_EXT+=	Tooling/Core/Replacement.cpp
+SRCS_MIN+=	Tooling/Core/Replacement.cpp
 SRCS_MIN+=	Tooling/FileMatchTrie.cpp
 SRCS_EXT+=	Tooling/Inclusions/HeaderIncludes.cpp
 SRCS_EXT+=	Tooling/Inclusions/IncludeStyle.cpp
@@ -874,6 +909,32 @@ clang/Basic/arm_neon.inc: ${CLANG_SRCS}/include/clang/Basic/arm_neon.td
 	    -o ${.TARGET} ${CLANG_SRCS}/include/clang/Basic/arm_neon.td
 TGHDRS+=	clang/Basic/arm_neon.inc
 
+clang/Basic/arm_cde_builtins.inc: ${CLANG_SRCS}/include/clang/Basic/arm_cde.td
+	${CLANG_TBLGEN} -gen-arm-cde-builtin-def \
+	    -I ${CLANG_SRCS}/include/clang/Basic -d ${.TARGET:C/$/.d/} \
+	    -o ${.TARGET} ${CLANG_SRCS}/include/clang/Basic/arm_cde.td
+TGHDRS+=	clang/Basic/arm_cde_builtins.inc
+
+clang/Basic/arm_cde_builtin_aliases.inc: \
+	${CLANG_SRCS}/include/clang/Basic/arm_cde.td
+	${CLANG_TBLGEN} -gen-arm-cde-builtin-aliases \
+	    -I ${CLANG_SRCS}/include/clang/Basic -d ${.TARGET:C/$/.d/} \
+	    -o ${.TARGET} ${CLANG_SRCS}/include/clang/Basic/arm_cde.td
+TGHDRS+=	clang/Basic/arm_cde_builtin_aliases.inc
+
+clang/Basic/arm_cde_builtin_cg.inc: ${CLANG_SRCS}/include/clang/Basic/arm_cde.td
+	${CLANG_TBLGEN} -gen-arm-cde-builtin-codegen \
+	    -I ${CLANG_SRCS}/include/clang/Basic -d ${.TARGET:C/$/.d/} \
+	    -o ${.TARGET} ${CLANG_SRCS}/include/clang/Basic/arm_cde.td
+TGHDRS+=	clang/Basic/arm_cde_builtin_cg.inc
+
+clang/Basic/arm_cde_builtin_sema.inc: \
+	${CLANG_SRCS}/include/clang/Basic/arm_cde.td
+	${CLANG_TBLGEN} -gen-arm-cde-builtin-sema \
+	    -I ${CLANG_SRCS}/include/clang/Basic -d ${.TARGET:C/$/.d/} \
+	    -o ${.TARGET} ${CLANG_SRCS}/include/clang/Basic/arm_cde.td
+TGHDRS+=	clang/Basic/arm_cde_builtin_sema.inc
+
 clang/Basic/arm_mve_builtins.inc: ${CLANG_SRCS}/include/clang/Basic/arm_mve.td
 	${CLANG_TBLGEN} -gen-arm-mve-builtin-def \
 	    -I ${CLANG_SRCS}/include/clang/Basic -d ${.TARGET:C/$/.d/} \
@@ -899,6 +960,46 @@ clang/Basic/arm_mve_builtin_sema.inc: \
 	    -I ${CLANG_SRCS}/include/clang/Basic -d ${.TARGET:C/$/.d/} \
 	    -o ${.TARGET} ${CLANG_SRCS}/include/clang/Basic/arm_mve.td
 TGHDRS+=	clang/Basic/arm_mve_builtin_sema.inc
+
+clang/Basic/arm_sve_builtins.inc: ${CLANG_SRCS}/include/clang/Basic/arm_sve.td
+	${CLANG_TBLGEN} -gen-arm-sve-builtins \
+	    -I ${CLANG_SRCS}/include/clang/Basic -d ${.TARGET:C/$/.d/} \
+	    -o ${.TARGET} ${CLANG_SRCS}/include/clang/Basic/arm_sve.td
+TGHDRS+=	clang/Basic/arm_sve_builtins.inc
+
+clang/Basic/arm_sve_builtin_cg.inc: ${CLANG_SRCS}/include/clang/Basic/arm_sve.td
+	${CLANG_TBLGEN} -gen-arm-sve-builtin-codegen \
+	    -I ${CLANG_SRCS}/include/clang/Basic -d ${.TARGET:C/$/.d/} \
+	    -o ${.TARGET} ${CLANG_SRCS}/include/clang/Basic/arm_sve.td
+TGHDRS+=	clang/Basic/arm_sve_builtin_cg.inc
+
+clang/Basic/arm_sve_sema_rangechecks.inc: \
+	${CLANG_SRCS}/include/clang/Basic/arm_sve.td
+	${CLANG_TBLGEN} -gen-arm-sve-sema-rangechecks \
+	    -I ${CLANG_SRCS}/include/clang/Basic -d ${.TARGET:C/$/.d/} \
+	    -o ${.TARGET} ${CLANG_SRCS}/include/clang/Basic/arm_sve.td
+TGHDRS+=	clang/Basic/arm_sve_sema_rangechecks.inc
+
+clang/Basic/arm_sve_typeflags.inc: \
+	${CLANG_SRCS}/include/clang/Basic/arm_sve.td
+	${CLANG_TBLGEN} -gen-arm-sve-typeflags \
+	    -I ${CLANG_SRCS}/include/clang/Basic -d ${.TARGET:C/$/.d/} \
+	    -o ${.TARGET} ${CLANG_SRCS}/include/clang/Basic/arm_sve.td
+TGHDRS+=	clang/Basic/arm_sve_typeflags.inc
+
+clang/Basic/riscv_vector_builtins.inc: \
+	${CLANG_SRCS}/include/clang/Basic/riscv_vector.td
+	${CLANG_TBLGEN} -gen-riscv-vector-builtins \
+	    -I ${CLANG_SRCS}/include/clang/Basic -d ${.TARGET:C/$/.d/} \
+	    -o ${.TARGET} ${CLANG_SRCS}/include/clang/Basic/riscv_vector.td
+TGHDRS+=	clang/Basic/riscv_vector_builtins.inc
+
+clang/Basic/riscv_vector_builtin_cg.inc: \
+	${CLANG_SRCS}/include/clang/Basic/riscv_vector.td
+	${CLANG_TBLGEN} -gen-riscv-vector-builtin-codegen \
+	    -I ${CLANG_SRCS}/include/clang/Basic -d ${.TARGET:C/$/.d/} \
+	    -o ${.TARGET} ${CLANG_SRCS}/include/clang/Basic/riscv_vector.td
+TGHDRS+=	clang/Basic/riscv_vector_builtin_cg.inc
 
 clang/Driver/Options.inc: ${CLANG_SRCS}/include/clang/Driver/Options.td
 	${LLVM_TBLGEN} -gen-opt-parser-defs \
@@ -984,16 +1085,7 @@ OpenCLBuiltins.inc: ${CLANG_SRCS}/lib/Sema/OpenCLBuiltins.td
 	    ${CLANG_SRCS}/lib/Sema/OpenCLBuiltins.td
 TGHDRS+=	OpenCLBuiltins.inc
 
-.for dep in ${TGHDRS:C/$/.d/}
-. if ${MAKE_VERSION} < 20160220
-.  if !make(depend)
-.   sinclude "${dep}"
-.  endif
-. else
-.   dinclude "${dep}"
-. endif
-.endfor
-
+DEPENDFILES+=	${TGHDRS:C/$/.d/}
 DPSRCS+=	${TGHDRS}
 CLEANFILES+=	${TGHDRS} ${TGHDRS:C/$/.d/}
 
