--- a/lib/clang/libllvmminimal/Makefile
+++ b/lib/clang/libllvmminimal/Makefile
@@ -7,6 +7,7 @@ INTERNALLIB=
 
 SRCDIR=		llvm/lib
 SRCS+=		Demangle/ItaniumDemangle.cpp
+SRCS+=		Support/ABIBreak.cpp
 SRCS+=		Support/APFloat.cpp
 SRCS+=		Support/APInt.cpp
 SRCS+=		Support/ARMTargetParser.cpp
@@ -17,26 +18,31 @@ SRCS+=		Support/ConvertUTF.cpp
 SRCS+=		Support/ConvertUTFWrapper.cpp
 SRCS+=		Support/CrashRecoveryContext.cpp
 SRCS+=		Support/Debug.cpp
+SRCS+=		Support/DebugCounter.cpp
 SRCS+=		Support/Errno.cpp
 SRCS+=		Support/Error.cpp
 SRCS+=		Support/ErrorHandling.cpp
 SRCS+=		Support/FoldingSet.cpp
 SRCS+=		Support/FormatVariadic.cpp
 SRCS+=		Support/FormattedStream.cpp
+SRCS+=		Support/GraphWriter.cpp
 SRCS+=		Support/Hashing.cpp
 SRCS+=		Support/Host.cpp
+SRCS+=		Support/InitLLVM.cpp
 SRCS+=		Support/IntEqClasses.cpp
 SRCS+=		Support/JSON.cpp
 SRCS+=		Support/Locale.cpp
 SRCS+=		Support/LowLevelType.cpp
 SRCS+=		Support/MD5.cpp
 SRCS+=		Support/ManagedStatic.cpp
+SRCS+=		Support/MemAlloc.cpp
 SRCS+=		Support/MemoryBuffer.cpp
 SRCS+=		Support/NativeFormatting.cpp
 SRCS+=		Support/Path.cpp
 SRCS+=		Support/PrettyStackTrace.cpp
 SRCS+=		Support/Process.cpp
 SRCS+=		Support/Program.cpp
+SRCS+=		Support/RandomNumberGenerator.cpp
 SRCS+=		Support/Regex.cpp
 SRCS+=		Support/Signals.cpp
 SRCS+=		Support/Signposts.cpp
@@ -54,6 +60,7 @@ SRCS+=		Support/Timer.cpp
 SRCS+=		Support/ToolOutputFile.cpp
 SRCS+=		Support/Triple.cpp
 SRCS+=		Support/Twine.cpp
+SRCS+=		Support/TypeSize.cpp
 SRCS+=		Support/Unicode.cpp
 SRCS+=		Support/VirtualFileSystem.cpp
 SRCS+=		Support/Watchdog.cpp
@@ -66,6 +73,7 @@ SRCS+=		Support/regerror.c
 SRCS+=		Support/regexec.c
 SRCS+=		Support/regfree.c
 SRCS+=		Support/regstrlcpy.c
+SRCS+=		TableGen/DetailedRecordsBackend.cpp
 SRCS+=		TableGen/Error.cpp
 SRCS+=		TableGen/JSONBackend.cpp
 SRCS+=		TableGen/Main.cpp
