--- a/lib/libkvm/tests/Makefile
+++ b/lib/libkvm/tests/Makefile
@@ -1,4 +1,4 @@
-# $FreeBSD: stable/11/lib/libkvm/tests/Makefile 316099 2017-03-28 17:37:49Z ngie $
+# $FreeBSD$
 
 .include <bsd.own.mk>
 
@@ -6,8 +6,10 @@ ATF_TESTS_C+=	kvm_close_test
 ATF_TESTS_C+=	kvm_geterr_test
 ATF_TESTS_C+=	kvm_open_test
 ATF_TESTS_C+=	kvm_open2_test
+ATF_TESTS_C+=	kvm_read_test
 
 CFLAGS.kvm_geterr_test+=	-I${.CURDIR:H}
+CFLAGS.kvm_read_test+=		-I${.CURDIR:H}
 
 LIBADD+=	kvm
 
@@ -15,7 +17,7 @@ WARNS?=		6
 
 BINDIR=		${TESTSDIR}
 
-.for t in kvm_geterr_test kvm_open_test kvm_open2_test
+.for t in kvm_geterr_test kvm_open_test kvm_open2_test kvm_read_test
 SRCS.$t=	$t.c kvm_test_common.c
 .endfor
 
