fdsisk, ffsinfo etherswitchcfg

--- a/sbin/fsck_ffs/Makefile
+++ b/sbin/fsck_ffs/Makefile
@@ -1,4 +1,4 @@
-# $FreeBSD: stable/11/sbin/fsck_ffs/Makefile 319185 2017-05-30 04:17:22Z ngie $
+# $FreeBSD$
 #	@(#)Makefile	8.2 (Berkeley) 4/27/95
 
 PACKAGE=runtime
