--- a/sbin/fdisk/Makefile
+++ b/sbin/fdisk/Makefile
@@ -1,4 +1,4 @@
-# $FreeBSD: stable/11/sbin/fdisk/Makefile 319185 2017-05-30 04:17:22Z ngie $
+# $FreeBSD$
 
 PACKAGE=runtime
 PROG=	fdisk
@@ -8,7 +8,7 @@ MAN=	fdisk.8
 
 .PATH:	${SRCTOP}/sys/geom
 
-LIBADD+=	geom
+LIBADD=	geom
 
 .include <bsd.prog.mk>
 
