--- a/sbin/ffsinfo/Makefile
+++ b/sbin/ffsinfo/Makefile
@@ -1,7 +1,7 @@
 # @(#)Makefile    8.8 (Berkeley) 6/21/2000
 #
 # $TSHeader: src/sbin/ffsinfo/Makefile,v 1.3 2000/12/05 19:45:10 tomsoft Exp $
-# $FreeBSD: stable/11/sbin/ffsinfo/Makefile 319185 2017-05-30 04:17:22Z ngie $
+# $FreeBSD$
 #
 
 GROWFS= ${.CURDIR:H}/growfs
