--- a/sbin/fsck/Makefile
+++ b/sbin/fsck/Makefile
@@ -1,5 +1,5 @@
 #	$NetBSD: Makefile,v 1.14 1996/09/27 22:38:37 christos Exp $
-# $FreeBSD: stable/11/sbin/fsck/Makefile 298107 2016-04-16 07:45:30Z gjb $
+# $FreeBSD$
 
 PACKAGE=runtime
 PROG=	fsck
