--- a/tests/sys/geom/class/Makefile
+++ b/tests/sys/geom/class/Makefile
@@ -1,13 +1,18 @@
-# $FreeBSD: stable/11/tests/sys/geom/class/Makefile 330733 2018-03-10 03:34:27Z asomers $
+# $FreeBSD$
+
+.include <src.opts.mk>
 
 PACKAGE=	tests
 
 TESTSDIR=	${TESTSBASE}/sys/geom/class
 
 TESTS_SUBDIRS+=	concat
+.if ${MK_OPENSSL} != "no"
 TESTS_SUBDIRS+=	eli
+.endif
 TESTS_SUBDIRS+=	gate
 TESTS_SUBDIRS+=	mirror
+TESTS_SUBDIRS+=	multipath
 TESTS_SUBDIRS+=	nop
 TESTS_SUBDIRS+=	part
 TESTS_SUBDIRS+=	raid3
